@startuml

class Coche{
    avanza(%)
    gira(%)
    ..
    init()
}
class Mando {
    getBotones(boton)
    getJoystick(joystick)
    ..
    init()
    loop()
}
class Radar{
    agregarAngulo(angulo, &distancia)
    ..
    init()
    loop()
}
class Servo{
    write(angulo)
    ..
    init()
}
class Ping{
    pingcm()
    ..
    init()
}
class Rueda{
    mueve(%)
    ..
    init()
}

Coche o-- Rueda : ruedaIzq
Coche o-- Rueda : ruedaDer
Radar o-- Ping
Radar o-- Servo
@enduml